Fix sidebar width on mobile

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -81,13 +81,14 @@
     }
   }
 
+  @media (max-width: $breakpoint-medium) {
+    width: calc(var(--side-nav-width) + 6px);
+  }
+
   @media (max-width: $breakpoint-small) {
     top: var(--header-height-mobile);
     height: calc(100vh - var(--header-height-mobile));
-  }
-
-  @media (max-width: $breakpoint-medium) {
-    width: calc(var(--side-nav-width) + 6px);
+    width: var(--side-nav-width);
   }
 
   @media (pointer: coarse) {
